<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/logo"
        android:contentDescription="@string/app_name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp" />

    <Button
        android:id="@+id/playButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/play"
        android:background="@drawable/rounded_button"
        android:textColor="@color/buttonTextColor"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@+id/logoImageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="32dp" />

    <Button
        android:id="@+id/rulesButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/rules"
        android:background="@drawable/rounded_button"
        android:textColor="@color/buttonTextColor"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@+id/playButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/highscoreButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/Highscores"
        android:background="@drawable/rounded_button"
        android:textColor="@color/buttonTextColor"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@+id/rulesButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/logoutButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:background="@drawable/rounded_button"
        android:textColor="@color/buttonTextColor"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@+id/highscoreButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
